--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
 
                 <div class="option-row compact-row">
-                    <div id="textOptions" style="display:flex; gap:8px;">
+                    <div id="textOptions" style="display:flex; gap:8px; align-items:center;">
                         <label class="option-check">
                             <input type="checkbox" id="showName" checked> 상품명
                         </label>
@@ -117,7 +117,7 @@
                             <input type="checkbox" id="showPrice"> 가격
                         </label>
                     </div>
-                    
+
                     <label class="option-check" style="margin-left: 5px; color: var(--theme-color); font-weight: bold;">
                         <input type="checkbox" id="simpleMode" onchange="toggleSimpleModeUI()"> 간소화
                     </label>
