--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         </label>
                     </div>
 
-                    <label class="option-check" style="margin-left: 5px; color: var(--theme-color); font-weight: bold;">
+                    <label class="option-check" style="margin-left: 5px; font-weight: bold;">
                         <input type="checkbox" id="simpleMode" onchange="toggleSimpleModeUI()"> 간소화
                     </label>
                 </div>
